# spoofylights-lib

./: .gitignore  Cargo.toml  wooting-rgb-sdk64.def  wooting-rgb-sdk64.exp  wooting-rgb-sdk64.lib
src/: car.rs  lib.rs  main.rs
src/frame/: algos.rs  mod.rs  pixel.rs
src/raymond/: hardware.rs  javasimulator.rs  mod.rs  wooting.rs
tests/: frametest.rs
