[package]
name = "spoofylightslib"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["lib"]
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
libc = "0.2.0"
wooting-sdk = "0.1.1"
# rpi-led-matrix = "0.4.0"
[target.'cfg(target_arch = "arm")'.dependencies]
rpi-led-matrix = {path = "deps/rpi-led-matrix", version = "0.4.0"} 